--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "cube-ui": "~1.12.15",
+    "vue-router": "^3.1.6",
     "vue": "^2.6.11"
   },
   "devDependencies": {
